# RTIC-Embassy-on-stm32-experiences

./: README.md  flake.nix  rust-toolchain.toml
responsive-button/: README.md
responsive-button/pure-embassy/: Cargo.toml  Embed.toml  README.md
responsive-button/pure-embassy/src/: main.rs
responsive-button/rtic-embassy/: .neoconf.json  Cargo.toml  Embed.toml  README.md
responsive-button/rtic-embassy/src/: main.rs
tsc-num-keyboard/pure-embassy/: Cargo.toml
tsc-num-keyboard/pure-embassy/.cargo/: config.toml
