[package]
name = "responsive-button"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-stm32 = {version = "0.1", features = ["defmt", "stm32f303ze", "unstable-pac", "memory-x", "time-driver-any", "exti"]}
embassy-time = {version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
panic-halt = "0.2"
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_expand = true
