[package]
name = "responsive-button"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
# NOTE: we cannot enable exti for embassy-stm32, because the interrupt Enum values will clash with RTIC interrupt Enum values causing the ldd to complain
#embassy-stm32 = {version = "0.1", features = ["defmt", "stm32f303ze", "unstable-pac", "memory-x", "time-driver-any", "exti"]}
embassy-stm32 = {version = "0.1", features = ["defmt", "stm32f303ze", "unstable-pac", "memory-x", "time-driver-any"]}
panic-halt = "0.2"
rtic = { version = "2.1.1", features = [ "thumbv7-backend" ] }
rtic-sync = "1.3.0"
rtic-monotonics = {version = "2.0.1", features = ["cortex-m-systick"]}
embassy-futures = "0.1.1"

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_expand = true
