[package]
name = "pure-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

panic-halt = "0.2"

#embassy-stm32 = {version = "0.1", features = ["defmt", "stm32f303ze", "unstable-pac", "memory-x", "time-driver-any", "exti"]}
embassy-stm32 = {git = "https://github.com/michelrandahl/embassy.git", rev = "7d93a022023279d30e16356bf51704cab16b7913", features = ["defmt", "stm32l4r5zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]}

#embassy-time = {version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
embassy-time = {git = "https://github.com/michelrandahl/embassy.git", rev = "7d93a022023279d30e16356bf51704cab16b7913", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}

#embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-executor = {git = "https://github.com/michelrandahl/embassy.git", rev = "7d93a022023279d30e16356bf51704cab16b7913", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}

#embassy-sync = {version = "0.6.0", features = ["defmt"]}
embassy-sync = {git = "https://github.com/michelrandahl/embassy.git", rev = "7d93a022023279d30e16356bf51704cab16b7913", features = ["defmt"]}

#embassy-futures = "0.1.1"
embassy-futures = {git = "https://github.com/michelrandahl/embassy.git", rev = "7d93a022023279d30e16356bf51704cab16b7913"}

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_expand = true
